--- a/responsive.css
+++ b/responsive.css
@@ -21,7 +21,11 @@
         width: 100%;
     }
     .right h2{
+        z-index: -10;
+    }
+    .right:hover h2{
         bottom: 9.5%;
+        z-index: 1;
     }
 }
 
