--- a/responsive.css
+++ b/responsive.css
@@ -10,21 +10,31 @@
     }
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1026px) {
     .container{
         flex-direction: column;
     }
     .left{
         width: 100%;
+        height: 35%;
+        gap: 2rem;
+    }
+    .left h1{
+        margin-bottom: 0;
+    }
+    .details{
+        gap: 1rem;
     }
     .right{
         width: 100%;
+        padding-bottom: 2rem;
+        height: max-content;
     }
     .right h2{
         z-index: -10;
     }
     .right:hover h2{
-        bottom: 9.5%;
+        bottom: 6.5%;
         z-index: 1;
     }
 }
